<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.diva.simpleui.DrinkMenuActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/root">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/textView2"
                android:id="@+id/textView2"
                android:layout_weight="1"
                android:textSize="20dp" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/button3"
                android:id="@+id/button3"
                android:layout_weight="1"
                android:onClick="add" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/button4"
                android:id="@+id/button4"
                android:layout_weight="1"
                android:onClick="add" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/textView3"
                android:id="@+id/textView3"
                android:layout_weight="1"
                android:textSize="20dp" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/button5"
                android:id="@+id/button5"
                android:layout_weight="1"
                android:onClick="add" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/button6"
                android:id="@+id/button6"
                android:layout_weight="1"
                android:onClick="add" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/textView4"
                android:id="@+id/textView4"
                android:layout_weight="1"
                android:textSize="20dp" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/button7"
                android:id="@+id/button7"
                android:layout_weight="1"
                android:onClick="add" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/button8"
                android:id="@+id/button8"
                android:layout_weight="1"
                android:onClick="add" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/button9"
                android:id="@+id/button9"
                android:layout_weight="1"
                android:onClick="done" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/button10"
                android:id="@+id/button10"
                android:layout_weight="1"
                android:onClick="cancel" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
